syntax = "proto3";
package user;

service UserService {
    rpc FindUserById(FindUserByIdRequest) returns (UserResponse);
    rpc FindUserByUsername(FindUserByUsernameRequest) returns (UserResponse);
    rpc FindUserByEmail(FindUserByEmailRequest) returns (UserResponse);
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

}

message FindUserByIdRequest {
    string id = 1;
}

message FindUserByUsernameRequest {
    string username = 1;
}

message FindUserByEmailRequest {
    string email = 1;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}


message UserResponse {
    string id = 1;
    string username = 2;
    string email = 3;
}
